src/test/deca/context/invalid/field_name_alreadyUsed.deca
\\ERROR :4
class A{
int x;
int x;
}